--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@core": ["./src/common"],
+      "@core/*": ["./src/common/*"],
+      "@configurations": ["./src/configurations"],
+      "@configurations/*": ["./src/configurations/*"],
+      "@modules": ["./src/modules"],
+      "@modules/*": ["./src/modules/*"]
+    }
   }
 }
